--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>JavaScript</title>
 </head>
 <body>
+    <style>
+        /*css zone*/
+    </style>
+    
     <h1>JavaScript</h1>
+    <!--html zone-->
+
+    
+    <script src="script.js"></script>
 </body>
 </html>
